--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
 
     - name: Install dependencies & Build
       run: |
+        cd bonkgames-app
         npm ci
         npm run build
-      working-directory: ./bonkgames-app
 
     - name: Prepare SSH
       uses: webfactory/ssh-agent@v0.9.0
