--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,18 +37,18 @@ jobs:
         host="${server#*@}"
         echo "Adding $host to known_hosts"
         ssh-keyscan -H "$host" >> ~/.ssh/known_hosts
+
+    - name: Debug FS structure
+      run: |
+        pwd
+        ls -R . | sed -e 's/^/   /'
+      
       
     - name: Sync dist to server
       run: |
         rsync -avz --delete bonkgames-app/dist/ \
           ${{ secrets.DEPLOY_SERVER }}:/var/www/html/bonkgames-app/dist/
 
-    - name: Sync files to server
-      run: |
-        rsync -avz --delete \
-          ./bonkgames-app/dist/ \
-          ${{ secrets.DEPLOY_SERVER }}:/var/www/html/bonkgames-app/dist/
-      # si tu backend también cambia, añade otra línea rsync para Backend/
 
     - name: Reload Nginx
       run: |
